# agent-orchestrator

./: .gitignore  README.md  demo_news.py  demo_publish.py  demo_workflow.py  pyproject.toml  start_dashboard.py
agent_orchestrator/: __init__.py
agent_orchestrator/adapters/: __init__.py  base.py  codex_app_server.py  codex_cli.py  shell.py
agent_orchestrator/core/: __init__.py  orchestrator.py  task.py  workflow.py
agent_orchestrator/dashboard/: __init__.py  server.py
agent_orchestrator/dashboard/templates/: index.html
agent_orchestrator/examples/: demo.py
tests/: test_core.py
