[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Self-orchestrating multi-agent system powered by Codex CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["agent", "orchestration", "codex", "multi-agent", "ai", "autonomous"]
classifiers = [
    "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "pyyaml>=6.0",
    "aiofiles>=24.0",
]

[tool.setuptools.packages.find]
include = ["agent_orchestrator*"]